[package]
name = "cargo-goggles"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["development-tools::cargo-plugins"]
keywords = ["git-repository", "cargo-lock", "reproducible", "registry", "verify"]
description = "Verify that registry crates in your Cargo.lock are reproducible from the git repository"
repository = "https://github.com/M4SS-Code/cargo-goggles"

[dependencies]
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
cargo-lock = "10"
cargo_toml = "0.22"
tar = "0.4.40"
flate2 = "1"
sha2 = "0.10"
url = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.14"
rayon = "1"
